# CudaImageProcessing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
kernels/: imageLoad.cu  imageLoad.h  imageTools.cu  imageTools.h
